en/11.2/admin/backup-guide.rst
======
Backup
======

Overview
========

Backup page allows you to download your configuration data for |Fess|.

Management Operations
=====================

Download Data
--------------

|Fess| manages configuration data as indices.
To download your configuration, click the index name.

|image0|

.fess_config
::::::::::::

.fess_config index contains |Fess| configuration data.

.fess_basic_config
::::::::::::

.fess_basic_config index contains |Fess| configuration data without failure urls.

.fess_user
::::::::::

.fess_user index contains user, role and group information.

system.properties
:::::::::::::::::

System configuration file.

click_log.csv
:::::::::::::

Click log file.

favorite_log.csv
::::::::::::::::

Favorite log file.

search_log.csv
::::::::::::::

Search log file.

search_field_log.csv
::::::::::::::::::::

Search log file by fields.

user_info.csv
:::::::::::::

Accessed user log file.

.. |image0| image:: ../../../resources/images/en/11.2/admin/backup-1.png

